# ploteasy

./: CONTRIBUTING.rst  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  team_work_contract.md  usage.rst
ploteasy/: ploteasy.py
tests/: test_ploteasy.py
