[tool.poetry]
name = "ploteasy"
version = "0.1.0"
description = "This is a python package that offers beginner-friendly functions for generating data visualization plots."
authors = ["Fei Chang <fc1271@nyu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
