[tool.poetry]
name = "ploteasy"
version = "0.1.0"
description = "This is a python package that offers beginner-friendly functions for generating data visualization plots."
authors = ["Fei Chang <fc1271@nyu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
pytest = "^6.2.2"
codecov = "^2.1.11"
flake8 = "^3.8.4"
pandas = "^1.2.3"
altair = "^4.1.0"
Sphinx = "^3.5.2"
nbsphinx = "^0.8.2"
ipykernel = "^5.5.0"
vega-datasets = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
